<resources>
    <string name="app_name">MovieFlixJose</string>
    <string name="tittle_app">Movie Flix</string>
    <string name="title_abs">Filmes em destaque</string>
    <string name="title_abs_detail">Descrição</string>
    <string name="btn_voltar_text">Voltar</string>
    <string name="mLogin_usuario_title">Usuario</string>
    <string name="mLogin_senha">Senha</string>
    <string name="mLogin_btn_entrar">Entrar</string>
    <string name="mLogin_title">MovieFlix</string>
    <string name="dsc_user_field">Digite seu nome de usuário aqui</string>
    <string name="dsc_password_fiel">Digite sua senha aqui</string>
    <string name="dsc_enter_btn">Entrar no aplicativo</string>
    <string name="dsc_titulo_app">Titulo aplicativo</string>
    <string name="htn_user_name">Name</string>
    <string name="hnt_senha">Password</string>
</resources>