<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mLogin_splash_color"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinput_username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundColor="@android:color/transparent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/htn_user_name"
            android:textColorHint="@color/mLogin_backColor_main"
            android:inputType="textWebEditText" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinput_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_userPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/hnt_senha"
            android:inputType="textPassword"
            android:textColorHint="@color/mLogin_backColor_main"
            android:maxLength="8" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/mLogin_backColor_main"
        android:contentDescription="@string/dsc_enter_btn"
        android:text="@string/mLogin_btn_entrar"
        android:textColor="@color/mLogin_splash_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/dsc_titulo_app"
        android:text="@string/mLogin_title"
        android:textColor="@color/mLogin_backColor_main"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</LinearLayout>